# gravitee-platform-docs

./: .gitbook.yaml  .gitignore  .pre-commit-config.yaml  .vale.ini  CONTRIBUTING.md  README.md  SUMMARY.md  context7.json  cspell.json  package-lock.json  package.json  pyproject.toml  session_summary.md  spellcheck_report.txt  spellcheck_report_raw.txt  sync-policy-readmes.js
.claude/: settings.json
.github/: CODEOWNERS  exclude-patterns.txt  spellcheck-ignore.txt
docs/: _vale-test.md  test-bad.md  test-comments.go  test-comments.js  test-comments.py  test-comments.sh  test-vale-bad.md  test-vale-good.md  vale-demo.md  vale-full-test.md  vale-test.md
examples/: README.md  SUMMARY.md  agent-mesh.md  api-key.md  applications.md  configure-the-kafka-client-and-gateway.md  connect-to-an-endpoint-using-sse.md  discover-and-catalog-ai-agents-a2a.md  enterprise-edition.md  execution-engine.md  gateway-resource-sizing-guidelines.md  gravitee-api-definitions.md  gravitee-expression-language.md  logging.md  placeholder.md  reporters.md  resources.md  v4-api-policy-studio.md  vanilla-kubernetes.md
most-common-use-cases/: configure-dynamic-client-registration-with-apim.md  exposing-soap-webservices-as-rest-apis.md  rate-limiting-rest-api-use-cases.md
templates/: README.md  SUMMARY.md  gitbook-blocks.md  template-for-concept-articles.md  template-for-how-to-articles.md
tools/: cli.py  requirements-dev.txt  requirements.txt
trial-runs/: README.md  SUMMARY.md  configure-authentication-with-login-and-password.peer-reviewed.md  configure-authentication-with-sso.md  (+7 more)
(+9651 files in other folders)
